Correction tests & Jenkinsfile